--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,21 @@ header {
   text-align: center;
 }
 
+#navbar nav {
+  border-left: 1px solid #ccc;
+}
+
+#navbar nav a {
+  display: inline-block;
+  width: 16.666666%;
+  margin: 0;
+  padding: 22px 0;
+  text-transform: uppercase;
+  color: black;
+  text-align: center;
+  border-right: 1px solid #CCC;
+}
+
 /*////////// LOGO //////////*/
 
 
